Revision history for {{$dist->name}}

{{$NEXT}}
  - alias namespace instead of copying to conserve memory

0.06      2014-02-05 15:16:29 -0500
  - update tests with Archive::Libarchive::XS/FFI 0.06

0.05      2014-02-04 16:07:01 -0500
  - documentation tweaks

0.04      2014-02-04 13:26:24 -0500
  - first CPAN release