@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - alias namespace instead of copying to conserve memory
+  - prefer FFI for MidnightBSD where as it is more reliable
+  - update tests with Archive::Libarchive::XS/FFI 0.07
 
 0.06      2014-02-05 15:16:29 -0500
   - update tests with Archive::Libarchive::XS/FFI 0.06
